[project]
name = "truthound-orchestration"
version = "3.0.0"
description = "Official orchestration integrations for Truthound data quality framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Truthound Team", email = "team@truthound.dev" }
]
keywords = [
    "data-quality",
    "validation",
    "airflow",
    "dagster",
    "prefect",
    "mage",
    "kestra",
    "dbt",
    "truthound",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "polars>=0.20.0",
    "truthound>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
    "twine>=5.1.0",
    "pyyaml>=6.0.0",
]

airflow = [
    "apache-airflow>=2.6.0",
]

dagster = [
    "dagster>=1.5.0",
]

prefect = [
    "prefect>=2.14.0",
]

mage = [
]

kestra = [
    "kestra>=1.3.0",
    "pyyaml>=6.0.0",
]

docs = [
    "mkdocs>=1.6.0",
]

dbt = [
    "dbt-core>=1.10.0,<1.11.0",
    "dbt-postgres>=1.10.0,<1.11.0",
]

opentelemetry = [
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
]

all = [
    "build>=1.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
    "twine>=5.1.0",
    "pyyaml>=6.0.0",
    "apache-airflow>=2.6.0",
    "dagster>=1.5.0",
    "prefect>=2.14.0",
    "kestra>=1.3.0",
    "mkdocs>=1.6.0",
    "dbt-core>=1.10.0,<1.11.0",
    "dbt-postgres>=1.10.0,<1.11.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/seadonggyun4/truthound-orchestration"
Documentation = "https://truthound.netlify.app/"
Repository = "https://github.com/seadonggyun4/truthound-orchestration"
Issues = "https://github.com/seadonggyun4/truthound-orchestration/issues"

# Built-in engine plugins registration
# Third-party packages can register their engines using this entry point group
[project.entry-points."truthound.engines"]
truthound = "common.engines.truthound:TruthoundEngine"
great_expectations = "common.engines.great_expectations:GreatExpectationsAdapter"
pandera = "common.engines.pandera:PanderaAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "common",
    "packages/airflow/src/truthound_airflow",
    "packages/dagster/src/truthound_dagster",
    "packages/dbt/src/truthound_dbt",
    "packages/prefect/src/truthound_prefect",
    "packages/mage/src/truthound_mage",
    "packages/kestra/src/truthound_kestra",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv*",
    ".git",
    ".github",
    ".claude",
    "tests",
    "docs",
    "*.egg-info",
]

[tool.uv]
dev-dependencies = [
    "build>=1.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
    "twine>=5.1.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "common", "packages"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "airflow: marks tests requiring airflow",
    "dagster: marks tests requiring dagster",
    "prefect: marks tests requiring prefect",
    "mage: marks tests requiring mage",
    "kestra: marks tests requiring kestra",
    "dbt: marks tests requiring dbt",
    "opentelemetry: marks tests requiring opentelemetry",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["common", "packages"]
branch = true
parallel = true
omit = [
    "**/tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
show_missing = true
precision = 2

[tool.coverage.paths]
source = [
    "common/",
    "packages/",
]
